<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"

            android:text="@string/amount" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:hint="50"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/num_of_pax" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hint="3"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/no_svs"
            android:textOn="@string/no_svs" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/paynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/split" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_bill" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pays" />
    </LinearLayout>


</LinearLayout>